# rogueforge-launcher

./: .env  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: publish.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/pages/: BrowsePage.tsx  InstallPage.tsx  page.tsx
src/types/: fileList.ts  installState.type.ts  patch.type.ts
